--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -5,22 +5,25 @@ import Searchbar from '../components/Searchbar.astro';
 
 <Layout title="airbnb">
   <main>
-    <Searchbar
-      href="https://astro.build/chat/"
-      title="Community"
-      body="Come say hi to our amazing Discord community. ❤️"
-    />
+    <Searchbar />
   </main>
 </Layout>
 
 <style>
   main {
-    margin: auto;
-    padding: 1rem;
-    width: 800px;
-    max-width: calc(100% - 2rem);
-    color: white;
-    font-size: 20px;
-    line-height: 1.6;
+    /* font-family:
+      Circular,
+      -apple-system,
+      BlinkMacSystemFont,
+      Roboto,
+      Helvetica Neue,
+      sans-serif;
+    font-size: 0.875rem;
+    line-height: 1.43;
+    color: #222;
+    background-color: #fff;
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; */
   }
 </style>
