--- a/web/src/components/Searchbar.astro
+++ b/web/src/components/Searchbar.astro
@@ -2,22 +2,42 @@
 
 ---
 
-<div class="m">
-  <div><button>search</button></div>
-  <div>filters</div>
+<div class="my-2 mx-6 flex items-center space-x-2">
+  <div
+    class="px-4 flex h-12 items-center flex-grow flex-shrink rounded-full border-solid border border-slate-100 drop-shadow"
+  >
+    <button>
+      <span>
+        <svg
+          viewBox="0 0 32 32"
+          aria-hidden="true"
+          role="presentation"
+          focusable="false"
+          style="display: block; height: 20px; width: 20px; fill: currentcolor;"
+          ><path
+            d="M13 0a13 13 0 0 1 10.5 20.67l7.91 7.92-2.82 2.82-7.92-7.91A12.94 12.94 0 0 1 13 26a13 13 0 1 1 0-26zm0 4a9 9 0 1 0 0 18 9 9 0 0 0 0-18z"
+          ></path></svg
+        >
+      </span>
+    </button>
+  </div>
+  <div
+    class="flex items-center justify-center flex-grow-0 flex-shrink-0 h-10 w-10 rounded-full border-solid border border-slate-300"
+  >
+    <button>
+      <span>
+        <svg
+          viewBox="0 0 32 32"
+          aria-hidden="true"
+          role="presentation"
+          focusable="false"
+          style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;"
+          ><path
+            fill="none"
+            d="M7 16H3m26 0H15M29 6h-4m-8 0H3m26 20h-4M7 16a4 4 0 1 0 8 0 4 4 0 0 0-8 0zM17 6a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 20a4 4 0 1 0 8 0 4 4 0 0 0-8 0zm0 0H3"
+          ></path></svg
+        >
+      </span>
+    </button>
+  </div>
 </div>
-
-<style>
-  .link-card {
-    list-style: none;
-    display: flex;
-    padding: 1px;
-    background-color: #23262d;
-    background-image: none;
-    background-size: 400%;
-    border-radius: 7px;
-    background-position: 100%;
-    transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
-  }
-</style>
