--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -1,15 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Searchbar from '../components/Searchbar.astro';
+import Header from '../components/Header.astro';
 ---
 
 <Layout title="airbnb">
-  <main>
-    <Searchbar />
-  </main>
+  <Header />
 </Layout>
-
-<style>
-  main {
-  }
-</style>
