--- a/web/src/components/Searchbar.astro
+++ b/web/src/components/Searchbar.astro
@@ -2,11 +2,11 @@
 
 ---
 
-<div class="my-2 mx-6 flex items-center space-x-2">
+<div class="my-4 mx-6 flex items-center space-x-4">
   <div
-    class="px-4 flex h-12 items-center flex-grow flex-shrink rounded-full border-solid border border-slate-100 drop-shadow"
+    class="px-4 flex h-12 items-center flex-grow flex-shrink rounded-full border border-solid border-slate-100 shadow"
   >
-    <button>
+    <button class="flex gap-x-4">
       <span>
         <svg
           viewBox="0 0 32 32"
@@ -19,10 +19,11 @@
           ></path></svg
         >
       </span>
+      <span class="font-bold tracking-wide">Where to?</span>
     </button>
   </div>
   <div
-    class="flex items-center justify-center flex-grow-0 flex-shrink-0 h-10 w-10 rounded-full border-solid border border-slate-300"
+    class="flex items-center justify-center flex-grow-0 flex-shrink-0 h-10 w-10 rounded-full border border-solid border-slate-300"
   >
     <button>
       <span>
