--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -13,17 +13,20 @@ const { title } = Astro.props;
     <meta name="description" content="Airbnb" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/images/categories/1.jpg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
   <body>
-    <slot />
+    <main>
+      <slot />
+    </main>
   </body>
 </html>
 <style is:global>
   :root {
     font-family:
-      Circular,
+      'Circular',
       -apple-system,
       BlinkMacSystemFont,
       Roboto,
