--- a/web/src/components/Header.astro
+++ b/web/src/components/Header.astro
@@ -1,9 +1,9 @@
 ---
-import Categories from './Categories.astro';
+import Categories from './Categories.tsx';
 import Searchbar from './Searchbar.astro';
 ---
 
 <header class="border-b border-solid border-slate-100 drop-shadow">
   <Searchbar />
-  <Categories />
+  <Categories client:load />
 </header>
