--- a/web/src/components/Searchbar.astro
+++ b/web/src/components/Searchbar.astro
@@ -4,7 +4,7 @@
 
 <div class="my-4 mx-6 flex items-center space-x-4">
   <div
-    class="px-4 flex h-12 items-center flex-grow flex-shrink rounded-full border border-solid border-slate-100 shadow"
+    class="px-4 flex h-14 items-center flex-grow flex-shrink rounded-full border border-solid border-slate-100 shadow cursor-pointer"
   >
     <button class="flex gap-x-4">
       <span>
@@ -19,11 +19,11 @@
           ></path></svg
         >
       </span>
-      <span class="font-bold tracking-wide">Where to?</span>
+      <span class="font-semibold tracking-wide">Where to?</span>
     </button>
   </div>
   <div
-    class="flex items-center justify-center flex-grow-0 flex-shrink-0 h-10 w-10 rounded-full border border-solid border-slate-300"
+    class="flex items-center justify-center flex-grow-0 flex-shrink-0 h-12 w-12 rounded-full border border-solid border-slate-300 cursor-pointer"
   >
     <button>
       <span>
