--- a/web/src/components/Searchbar.astro
+++ b/web/src/components/Searchbar.astro
@@ -4,7 +4,8 @@
 
 <div class="my-4 mx-6 flex items-center space-x-4">
   <div
-    class="px-4 flex h-14 items-center flex-grow flex-shrink rounded-full border border-solid border-slate-100 shadow cursor-pointer"
+    class="px-4 flex h-14 items-center flex-grow flex-shrink rounded-full cursor-pointer"
+    style="box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);border: 0.5px solid rgba(0, 0, 0, 0.08);"
   >
     <button class="flex gap-x-4">
       <span>
