--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -13,7 +13,16 @@ const { title } = Astro.props;
     <meta name="description" content="Airbnb" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="/favicon.ico" />
-    <link rel="icon" href="/images/categories/1.jpg" />
+    <link rel="preload" as="image" href="/images/categories/1.jpg" />
+    <link rel="preload" as="image" href="/images/categories/2.jpg" />
+    <link rel="preload" as="image" href="/images/categories/3.jpg" />
+    <link rel="preload" as="image" href="/images/categories/4.jpg" />
+    <link rel="preload" as="image" href="/images/categories/5.jpg" />
+    <link rel="preload" as="image" href="/images/categories/6.jpg" />
+    <link rel="preload" as="image" href="/images/categories/7.jpg" />
+    <link rel="preload" as="image" href="/images/categories/8.jpg" />
+    <link rel="preload" as="image" href="/images/categories/9.jpg" />
+    <link rel="preload" as="image" href="/images/categories/10.jpg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
