--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -23,6 +23,7 @@ const { title } = Astro.props;
     <link rel="preload" as="image" href="/images/categories/8.jpg" />
     <link rel="preload" as="image" href="/images/categories/9.jpg" />
     <link rel="preload" as="image" href="/images/categories/10.jpg" />
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script> -->
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
@@ -50,6 +51,46 @@ const { title } = Astro.props;
     -moz-osx-font-smoothing: grayscale;
     user-select: none;
   }
+
+  /* Swiper customization */
+
+  swiper-container {
+    --swiper-pagination-color: rgba(255, 255, 255, 1);
+    --swiper-pagination-bullet-inactive-color: rgba(255, 255, 255, 0.6);
+    --swiper-pagination-bullet-inactive-opacity: 0.8;
+    border-radius: 12px;
+    overflow: hidden;
+  }
+  swiper-container swiper-slide {
+    position: relative;
+    min-height: 310px;
+    width: 100%;
+  }
+
+  /* swiper-container swiper-slide div.img-wrapper {
+    position: relative;
+    min-height: 310px;
+    width: 100%;
+  } */
+
+  swiper-container swiper-slide div.gradient {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(180deg, transparent 80%, rgba(0, 0, 0, 0.25));
+  }
+
+  swiper-container swiper-slide div img {
+    position: absolute;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+  }
+
+  /* swiper-container swiper-slide div img::before {
+    background: linear-gradient(180deg, transparent 80%, rgba(0, 0, 0, 0.25));
+  } */
+
   .no-scrollbar {
     scrollbar-width: none; /* Hide scrollbar on most browsers */
     ::-webkit-scrollbar: none; /* Hide scrollbar in Chrome, Safari, Edge, Opera  */
