--- a/web/src/components/Searchbar.astro
+++ b/web/src/components/Searchbar.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="my-4 mx-6 flex items-center space-x-4">
+<div class="py-4 mx-6 flex items-center space-x-4">
   <div
     class="px-4 flex h-14 items-center flex-grow flex-shrink rounded-full cursor-pointer"
     style="box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);border: 0.5px solid rgba(0, 0, 0, 0.08);"
